--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "@alicloud/dysmsapi20170525": "^3.0.0",
     "@alicloud/openapi-client": "^0.4.11",
     "@alicloud/tea-util": "^1.4.9",
-    "@nestjs/common": "^10.0.0",
+    "@casl/ability": "^6.7.1",
+    "@nestjs/common": "^10.4.3",
     "@nestjs/config": "^3.2.3",
     "@nestjs/core": "^10.0.0",
     "@nestjs/jwt": "^10.2.0",
@@ -38,6 +39,7 @@
     "ejs": "^3.1.10",
     "express-handlebars": "^8.0.1",
     "mongoose": "^8.6.1",
+    "multer": "1.4.5-lts.1",
     "nanoid": "^3.3.7",
     "node-gyp": "^10.2.0",
     "nodemailer": "^6.9.15",
